--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_core: ^3.4.1
   firebase_messaging: ^15.1.1
   flutter_local_notifications: ^17.2.2
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
