--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_messaging: ^15.1.1
   flutter_local_notifications: ^17.2.2
   visibility_detector: ^0.4.0+2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
