--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   visibility_detector: ^0.4.0+2
   http: ^1.2.2
+  restart_app: ^1.3.2
 
 dev_dependencies:
   flutter_test:
