--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   http: ^1.2.2
   restart_app: ^1.3.2
+  app_set_id: ^1.2.0
 
 dev_dependencies:
   flutter_test:
